# highpitchedtone

./: build.gradle
app/: CMakeLists.txt  build.gradle  google-services.json
app/src/androidTest/java/com/mymusic/orvai/high_pitched_tone/: ExampleInstrumentedTest.java
app/src/debug/res/values/: google_maps_api.xml
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/mymusic/orvai/high_pitched_tone/: Bbs_modify_activity.java  Bbs_view_activity.java  Bbs_write_activity.java  Camera_facedetection.java  Chat_room_Activity.java  Chat_room_create_Activity.java  Ear_sensitivity_test.java  LectureActivity.java  LoadingActivity.java  LoginActivity.java  MainActivity.java  MenuActivity.java  Mic_high_challenge.java  Perfect_singer.java  Perfect_singer_main.java  Pitch_ear_test_Activity.java  ProfileActivity.java  (+1 more)
app/src/main/res/anim/: loading_move.xml
app/src/main/res/drawable/: border.xml  border2.xml  border5.xml  border6.xml  chat_left.xml  chat_right.xml  high_pitch_rank.xml  menu_bbs.xml  menu_chat.xml  menu_microphone.xml  menu_school.xml  menu_youtube_lecture.xml  perfect_singer_activity_itemselected.xml  radius1.xml  radius2.xml  radius3.xml  radius4.xml  radius5.xml  radius6.xml  radius6_1.xml  radius7.xml  radius8.xml  radius9.xml
app/src/main/res/layout/: activity_bbs_modify.xml  activity_bbs_view.xml  activity_bbs_write.xml  activity_camera_facedetection.xml  activity_chat_room_create.xml  activity_chatroom.xml  activity_ear_sensitivity_test.xml  activity_lecture.xml  activity_loading.xml  activity_login.xml  activity_main.xml  activity_main_nav_drawer.xml  activity_menu.xml  activity_menu_nav_content.xml  activity_menu_nav_drawer.xml  activity_mic_high_challenge.xml  activity_perpect_singer.xml  activity_perpect_singer_main.xml  activity_pitch_ear_test.xml  activity_pitch_rank_dialog.xml  activity_profile.xml  activity_register.xml  fragment_tab1_lecture.xml  fragment_tab2_board.xml  fragment_tab3_chat.xml  fragment_tab4_mic.xml  fragment_tab5_school.xml  item_bbs.xml  item_chat_image.xml  item_chat_msg.xml  item_chatroom.xml  item_comment.xml  item_course.xml  item_enter_room_msg.xml  item_pitch_rank.xml  item_song_list.xml  item_vocaltrainer.xml  nav_header_main.xml
app/src/main/res/menu/: activity_main_drawer.xml  bbs_modify_toolbar_menu.xml  bbs_view_toolbar_menu.xml  bbs_write_toolbar_menu.xml  chat_toolbar_menu.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
(+48 files in other folders)
